jdk 2.7 syntax+inspections based on performance