@@ -22,7 +22,6 @@ public class MetaClass {
     private static final long serialVersionUID = -5980065992461870357L;
 
     private ClassCreationException() {
-      super();
     }
 
     private ClassCreationException(String msg) {
@@ -43,7 +42,6 @@ public class MetaClass {
     private static final long serialVersionUID = -5980065992461870357L;
 
     private ConstructorNotFoundException() {
-      super();
     }
 
     private ConstructorNotFoundException(String msg) {
@@ -113,10 +111,7 @@ public class MetaClass {
             minDist = Math.min(minDist, superDist);
           }
         }
-        if (minDist != Integer.MAX_VALUE)
-          return minDist + 1; // case: interface distance
-        else
-          return -1; // case: failure
+          return minDist != Integer.MAX_VALUE ? minDist + 1 : -1;
       }
     }
 
@@ -175,11 +170,11 @@ public class MetaClass {
       this.constructor = (Constructor<T>) argmin(potentials, distances, 0);
       if (this.constructor == null) {
         StringBuilder b = new StringBuilder();
-        b.append(classname).append("(");
+        b.append(classname).append('(');
         for (Class<?> c : params) {
           b.append(c.getName()).append(", ");
         }
-        String target = b.substring(0, params.length==0 ? b.length() : b.length() - 2) + ")";
+        String target = b.substring(0, params.length==0 ? b.length() : b.length() - 2) + ')';
         throw new ConstructorNotFoundException(
             "No constructor found to match: " + target);
       }
@@ -251,16 +246,15 @@ public class MetaClass {
     @Override
     public String toString() {
       StringBuilder b = new StringBuilder();
-      b.append(cl.getName()).append("(");
+      b.append(cl.getName()).append('(');
       for (Class<?> cl : classParams) {
-        b.append(" ").append(cl.getName()).append(",");
+        b.append(' ').append(cl.getName()).append(',');
       }
       b.replace(b.length() - 1, b.length(), " ");
-      b.append(")");
+      b.append(')');
       return b.toString();
     }
 
-    @SuppressWarnings("unchecked")
     @Override
     public boolean equals(Object o) {
       if (o instanceof ClassFactory) {
@@ -318,7 +312,7 @@ public class MetaClass {
    */
   public <E> ClassFactory<E> createFactory(Class<?>... classes) {
     try {
-      return new ClassFactory<E>(classname, classes);
+      return new ClassFactory<>(classname, classes);
     } catch (ClassCreationException e){
       throw e;
     } catch (Exception e) {
@@ -338,7 +332,7 @@ public class MetaClass {
    */
   public <E> ClassFactory<E> createFactory(String... classes) {
     try {
-      return new ClassFactory<E>(classname, classes);
+      return new ClassFactory<>(classname, classes);
     } catch (ClassCreationException e){
       throw e;
     } catch (Exception e) {
@@ -358,7 +352,7 @@ public class MetaClass {
    */
   public <E> ClassFactory<E> createFactory(Object... objects) {
     try {
-      return new ClassFactory<E>(classname, objects);
+      return new ClassFactory<>(classname, objects);
     } catch (ClassCreationException e){
       throw e;
     } catch (Exception e) {
@@ -424,10 +418,7 @@ public class MetaClass {
 
   @Override
   public boolean equals(Object o) {
-    if (o instanceof MetaClass) {
-      return ((MetaClass) o).classname.equals(this.classname);
-    }
-    return false;
+      return o instanceof MetaClass && ((MetaClass) o).classname.equals(this.classname);
   }
 
   @Override
@@ -457,24 +448,27 @@ public class MetaClass {
     return new MetaClass(clazz);
   }
 
-  /**
-   * Utility method for cast
-   * @param type The type to cast into a class
-   * @return The class corresponding to the passed in type
-   */
-  private static Class <?> type2class(Type type){
-		if(type instanceof Class <?>){
-			return (Class <?>) type;	//base case
-		}else if(type instanceof ParameterizedType){
-			return type2class( ((ParameterizedType) type).getRawType() );
-		}else if(type instanceof TypeVariable<?>){
-			return type2class( ((TypeVariable<?>) type).getBounds()[0] );
-		}else if(type instanceof WildcardType){
-			return type2class( ((WildcardType) type).getUpperBounds()[0] );
-		}else{
-			throw new IllegalArgumentException("Cannot convert type to class: " + type);
-		}
-	}
+    /**
+     * Utility method for cast
+     *
+     * @param type The type to cast into a class
+     * @return The class corresponding to the passed in type
+     */
+    private static Class<?> type2class(Type type) {
+        while (true) {
+            if (type instanceof Class<?>) {
+                return (Class<?>) type;    //base case
+            } else if (type instanceof ParameterizedType) {
+                type = ((ParameterizedType) type).getRawType();
+            } else if (type instanceof TypeVariable<?>) {
+                type = ((TypeVariable<?>) type).getBounds()[0];
+            } else if (type instanceof WildcardType) {
+                type = ((WildcardType) type).getUpperBounds()[0];
+            } else {
+                throw new IllegalArgumentException("Cannot convert type to class: " + type);
+            }
+        }
+    }
   /**
    * Decode an array encoded as a String. This entails a comma separated value enclosed in brackets
    * or parentheses
@@ -487,7 +481,7 @@ public class MetaClass {
 		//--Parse the String
 		//(state)
 		char quoteCloseChar = (char) 0;
-		List<StringBuilder> terms = new LinkedList<StringBuilder>();
+		List<StringBuilder> terms = new LinkedList<>();
 		StringBuilder current = new StringBuilder();
 		//(start/stop overhead)
 		int start = 0; int end = chars.length;
@@ -548,7 +542,7 @@ public class MetaClass {
    * @param type The type (usually class) to be returned (same as E)
    * @return An object corresponding to the String value passed
    */
-  @SuppressWarnings({ "unchecked", "rawtypes" })
+  @SuppressWarnings({ "unchecked"})
   public static final <E> E cast(String value, Type type){
     //--Get Type
     Class <?> clazz = null;
@@ -569,21 +563,21 @@ public class MetaClass {
       return (E) value;
     }else if(Boolean.class.isAssignableFrom(clazz) || boolean.class.isAssignableFrom(clazz)){
       //(case: boolean)
-      if("1".equals(value)){ return (E) new Boolean(true); }
-      return (E) new Boolean( Boolean.parseBoolean(value) );
+      if("1".equals(value)){ return (E) Boolean.TRUE; }
+      return (E) Boolean.valueOf(Boolean.parseBoolean(value));
     }else if(Integer.class.isAssignableFrom(clazz) || int.class.isAssignableFrom(clazz)){
       //(case: integer)
       try {
-        return (E) new Integer(Integer.parseInt(value));
+        return (E) Integer.valueOf(Integer.parseInt(value));
       } catch (NumberFormatException e) {
-        return (E) new Integer((int) Double.parseDouble(value));
+        return (E) Integer.valueOf((int) Double.parseDouble(value));
       }
     }else if(Long.class.isAssignableFrom(clazz) || long.class.isAssignableFrom(clazz)){
       //(case: long)
       try {
-        return (E) new Long(Long.parseLong(value));
+        return (E) Long.valueOf(Long.parseLong(value));
       } catch (NumberFormatException e) {
-        return (E) new Long((long) Double.parseDouble(value));
+        return (E) Long.valueOf((long) Double.parseDouble(value));
       }
     }else if(Float.class.isAssignableFrom(clazz) || float.class.isAssignableFrom(clazz)){
       //(case: float)
@@ -596,16 +590,16 @@ public class MetaClass {
     }else if(Short.class.isAssignableFrom(clazz) || short.class.isAssignableFrom(clazz)){
       //(case: short)
       try {
-        return (E) new Short(Short.parseShort(value));
+        return (E) Short.valueOf(Short.parseShort(value));
       } catch (NumberFormatException e) {
-        return (E) new Short((short) Double.parseDouble(value));
+        return (E) Short.valueOf((short) Double.parseDouble(value));
       }
     }else if(Byte.class.isAssignableFrom(clazz) || byte.class.isAssignableFrom(clazz)){
       //(case: byte)
       try {
-        return (E) new Byte(Byte.parseByte(value));
+        return (E) Byte.valueOf(Byte.parseByte(value));
       } catch (NumberFormatException e) {
-        return (E) new Byte((byte) Double.parseDouble(value));
+        return (E) Byte.valueOf((byte) Double.parseDouble(value));
       }
     }else if(Character.class.isAssignableFrom(clazz) || char.class.isAssignableFrom(clazz)){
       //(case: char)
@@ -671,12 +665,9 @@ public class MetaClass {
         // (case: can parse from string)
         Method decode = clazz.getMethod("fromString", String.class);
         return (E) decode.invoke(MetaClass.create(clazz), value);
-      } catch (NoSuchMethodException e) {  // Silent errors for misc failures
-      } catch (InvocationTargetException e) {
-      } catch (IllegalAccessException e) {
-      } catch (ClassCastException e) {
+      } catch (NoSuchMethodException | ClassCastException | IllegalAccessException | InvocationTargetException e) {  // Silent errors for misc failures
       }
-      // We could not cast this object
+        // We could not cast this object
       return null;
     }
   }
